:sparkles: refactor register methods impl.